[gd_scene load_steps=18 format=3]

[ext_resource type="Script" path="res://modules/world_player_v2/player.gd" id="1_player"]
[ext_resource type="Script" path="res://modules/world_player_v2/features/movement/player_movement.gd" id="2_movement"]
[ext_resource type="Script" path="res://modules/world_player_v2/features/camera/player_camera.gd" id="3_camera"]
[ext_resource type="Script" path="res://modules/world_player_v2/features/inventory/hotbar.gd" id="4_hotbar"]
[ext_resource type="Script" path="res://modules/world_player_v2/features/modes/mode_manager.gd" id="5_mode_manager"]
[ext_resource type="Script" path="res://modules/world_player_v2/features/inventory/item_use_router.gd" id="6_item_router"]
[ext_resource type="Script" path="res://modules/world_player_v2/features/combat/combat_system.gd" id="7_combat_system"]
[ext_resource type="Script" path="res://modules/world_player_v2/features/building/build_mode.gd" id="8_mode_build"]
[ext_resource type="Script" path="res://modules/world_player_v2/features/modes/mode_editor.gd" id="9_mode_editor"]
[ext_resource type="Script" path="res://modules/world_player_v2/features/inventory/inventory.gd" id="10_inventory"]
[ext_resource type="Script" path="res://modules/world_player_v2/features/interaction/player_interaction.gd" id="11_interaction"]
[ext_resource type="Script" path="res://modules/world_player_v2/features/combat/player_combat.gd" id="12_combat"]
[ext_resource type="PackedScene" path="res://modules/world_player_v2/features/hud/player_hud.tscn" id="13_hud"]
[ext_resource type="Script" path="res://modules/world_player_v2/features/combat/weapons/first_person_arms.gd" id="15_arms"]
[ext_resource type="Script" path="res://modules/world_player_v2/features/combat/weapons/first_person_pistol.gd" id="16_pistol"]
[ext_resource type="Script" path="res://modules/world_player_v2/features/combat/weapons/first_person_axe.gd" id="17_axe"]
[ext_resource type="Script" path="res://modules/world_player_v2/features/terrain/terrain_interaction.gd" id="18_terrain"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
radius = 0.4
height = 1.8

[node name="WorldPlayerV2" type="CharacterBody3D" groups=["player"]]
collision_layer = 3
collision_mask = 137
script = ExtResource("1_player")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)
current = true
fov = 75.0
near = 0.05

[node name="Components" type="Node" parent="."]

[node name="Movement" type="Node" parent="Components"]
script = ExtResource("2_movement")

[node name="Camera" type="Node" parent="Components"]
script = ExtResource("3_camera")

[node name="Interaction" type="Node" parent="Components"]
script = ExtResource("11_interaction")

[node name="Combat" type="Node" parent="Components"]
script = ExtResource("12_combat")

[node name="FirstPersonArms" type="Node" parent="Components"]
script = ExtResource("15_arms")

[node name="FirstPersonPistol" type="Node" parent="Components"]
script = ExtResource("16_pistol")

[node name="FirstPersonAxe" type="Node" parent="Components"]
script = ExtResource("17_axe")

[node name="Systems" type="Node" parent="."]

[node name="Hotbar" type="Node" parent="Systems"]
script = ExtResource("4_hotbar")

[node name="ModeManager" type="Node" parent="Systems"]
script = ExtResource("5_mode_manager")

[node name="ItemUseRouter" type="Node" parent="Systems"]
script = ExtResource("6_item_router")

[node name="Inventory" type="Node" parent="Systems"]
script = ExtResource("10_inventory")

[node name="Modes" type="Node" parent="."]

[node name="CombatSystem" type="Node" parent="Modes"]
script = ExtResource("7_combat_system")

[node name="ModeBuild" type="Node" parent="Modes"]
script = ExtResource("8_mode_build")

[node name="ModeEditor" type="Node" parent="Modes"]
script = ExtResource("9_mode_editor")

[node name="TerrainInteraction" type="Node" parent="Modes"]
script = ExtResource("18_terrain")

[node name="PlayerHUD" parent="." instance=ExtResource("13_hud")]
